--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
+	"publisher": "moneeyDev",
 	"name": "sol-filler",
 	"displayName": "sol-filler",
 	"description": "Automatically fills a .sol file with a template",
 	"version": "0.0.1",
+	"repository": "https://github.com/moneyDev1111/sol-filler",
 	"engines": {
 		"vscode": "^1.79.0"
 	},
