--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name": "sol-filler",
 	"displayName": "sol-filler",
 	"description": "Automatically fills a .sol file with a template",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"repository": "https://github.com/moneyDev1111/sol-filler",
 	"engines": {
 		"vscode": "^1.79.0"
@@ -11,7 +11,9 @@
 	"categories": [
 		"Other"
 	],
-	"activationEvents": [],
+	"activationEvents": [
+		"onFileSystem:file"
+	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
