--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onFileSystem:file"
+		"onStartupFinished"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
