--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"activationEvents": [
 		"onStartupFinished"
 	],
-	"main": "./out/extension.ts",
+	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
