--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"publisher": "C0D3O",
+	"publisher": "C0D30",
 	"name": "sol-filler",
 	"displayName": "sol-filler",
 	"description": "Automatically fills a .sol file with a template",
