--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"publisher": "C0D30",
 	"name": "sol-filler",
-	"displayName": "sol-filler",
+	"displayName": "Solidity Filler",
 	"description": "Automatically fills a .sol file with a template",
-	"version": "0.1.6",
+	"version": "0.1.61",
 	"repository": "https://github.com/C0D3O/sol-filler",
 	"engines": {
 		"vscode": "^1.79.0"
